--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "npm run prettier:ts -- --write",
-      "ts:lint:fix",
+      "npm run ts:lint:fix",
       "git add"
     ]
   },
