--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-sqs-worker",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "TypeScript worker stack using SQS",
   "main": "index.js",
   "types": "index.d.ts",
@@ -92,7 +92,7 @@
   },
   "dependencies": {
     "sqs-consumer": "^4.1.0",
-    "typedjson": "1.5.0"
+    "typedjson": "^1.5.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.0",
